# asntools

./: .gitignore  38321.txt  AGENTS.md  RAProc38213.txt  README.md  oldchat2.md  openapi-deref.yaml  openapi.json  openapi.yaml  project.md  proposal.txt  pyproject.toml  random_access_38300.txt  randomaccess.txt  spec_config.json
artifacts/: RACH-ConfigCommon_tree.md  bh_rlc_channelid_r16.json  msg1-RepetitionNum-r18_tree.md  msg1_rep_tree.md  msg1_repetition_num_tree.md  msg1_repetition_root_hopping_fulltext_with_deltas.md  pdcch_paths.json  si_schedulinginfo_v1800.json
artifacts/asntools_describe/: BWP-UplinkCommon.txt  (+2 more)
asn1/: NR-RRC-Definitions.asn  field_descriptions.json
asntools/: __init__.py  __main__.py  cli.py  cli_tree.py  compile_rrc.py  fetch_asn1.py  field_descriptions.py  introspect.py  logging_utils.py  mcp_server.py  rebuild.py  search_asn.py  server.py  spec_mcp_server.py  spec_server.py
diagrams/: bh_rlc_channelid_r16.md  msg1-RepetitionNum-r18-tree.md  pdcch.md  si_schedulinginfo_v1800.md
docs/: 38213-j10.html  38213-j10_toc.json  38300-j00.html  38300-j00_toc.json  38321-j00.html  38321-j00_toc.json  38331-i60_toc.json  api.md  msg1_repetition_root_hopping_r18.md  msg1_repetition_root_hopping_spec_deltas.md  oldchat.md  spec_doc_tools.md  windows_setup.rst
pycrate_asn1dir/: __init__.py
scripts/: build_msg1_root_hopping_delta_doc.py
tests/: conftest.py  test_cli_compile_command.py  test_cli_grep.py  test_field_descriptions.py  test_introspect.py  test_mcp_server.py  test_server.py  test_server_api.py  test_spec_docs.py  test_spec_server.py
(+851 files in other folders)
